IDEA-110255 [java]: handle default constructors and implicit super constructor calls better in Call Hierarchy
GitOrigin-RevId: bb2cf1e13cfc40f39fd5a26ced304cd1256efb8a